Fix styles in dark mode toggle and layout

--- a/src/features/auth/styles/UserAvatar.module.css
+++ b/src/features/auth/styles/UserAvatar.module.css
@@ -6,7 +6,7 @@
 
   .avatar {
     display: block;
-    width: 2.2rem;
+    width: 1.5rem;
     aspect-ratio: 1;
     object-fit: cover;
     object-position: center;
