--- a/src/ui/styles/Header.module.css
+++ b/src/ui/styles/Header.module.css
@@ -1,7 +1,7 @@
 .header {
   min-height: 64px;
   background-color: var(--color-grey-0);
-  border-bottom: 1px solid var(--color-grey-200);
+  border-bottom: 1px solid var(--color-grey-100);
   padding: 0rem 2rem;
   display: flex;
   justify-content: flex-end;
