--- a/src/ui/styles/Sidebar.module.css
+++ b/src/ui/styles/Sidebar.module.css
@@ -1,6 +1,6 @@
 .sidebar {
   grid-row: 1 / -1;
-  border-right: 1px solid var(--color-grey-200);
+  border-right: 1px solid var(--color-grey-100);
   background-color: var(--color-grey-0);
   padding: 0 1rem;
 }
